# VoiceBet

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  client.cpp
client/inc/: CoreApplication.h  NetworkHandler.h  Room.h  structMessage.h
client/src/: CoreApplication.cpp  NetworkHandler.cpp  Room.cpp
server/: CMakeLists.txt  main.cpp  server.cpp
server/inc/: ClientHandler.h  Server.h
server/src/: ClientHandler.cpp  Server.cpp
